-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.6
-
None
-
ae3754df9 (dev)
qmllint does not warn about the definitions of enums like following one
enum Hello { World, Worldy, Worldo, Hello }
This is confusing because the user might confuse Hello (the enum key) with Hello (the name of the enum). See the output of the attached project for an example, where someItem.World is an enum key while someItem.Hello is not an enum key.
- relates to
-
QTBUG-119890 qmllint warnings: reach feature parity with QtCreator
-
- In Progress
-
-
QTBUG-137292 EnumName - KeyName conflicts break enums in the interpreter
-
- Reported
-
| For Gerrit Dashboard: QTBUG-117300 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 643517,16 | qmllint: Warn about enum entries matching the name of the enum itself | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |