qmllint: Warn about enum entries matching the name of the enum itself

Fixes: QTBUG-117300
Task-number: QTBUG-119890
Change-Id: If503b3dbfe9c8ad916afa3b570861f62c33e1fbd
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>